@@ -16,37 +16,55 @@ To convert a web page type:
 % <KBD>htmldoc --webpage -f output.ps filename.html ENTER</KBD>
 </PRE></UL>
 
-The "--webpage" option tells <I>HTMLDOC</I> that you want to convert a
+where <CODE>output.pdf</CODE> and <CODE>output.ps</CODE> are the names
+of the files you want to generate, and <CODE>filename.html</CODE> is
+the HTML file you are converting.
+
+<P>The "--webpage" option tells <I>HTMLDOC</I> that you want to convert a
 web page or other unstructured document.
 
 <P>The "-f" option tells <I>HTMLDOC</I> what file to generate. If you
 don't specify an output file then a PDF file is send to the standard
 output.
 
+<!-- NEED 4in -->
 <H2>Generating Books</H2>
 
 To generate a book from one or more HTML files type:
 
 <UL><PRE>
-% <KBD>htmldoc --book -f output.html filename.html ENTER</KBD>
-% <KBD>htmldoc --book -f output.pdf filename.html ENTER</KBD>
-% <KBD>htmldoc --book -f output.ps filename.html ENTER</KBD>
+% <KBD>htmldoc --book -f output.html file1.html ... fileN.html ENTER</KBD>
+% <KBD>htmldoc --book -f output.pdf file1.html ... fileN.html ENTER</KBD>
+% <KBD>htmldoc --book -f output.ps file1.html ... fileN.html ENTER</KBD>
 </PRE></UL>
 
-The "--book" option tells <I>HTMLDOC</I> that you want to generate a
-book from the HTML file(s) you specified.
+where <CODE>output.html</CODE>, <CODE>output.pdf</CODE>, and <CODE>output.ps</CODE>
+are the names of the files you want to generate, and <CODE>file1.html</CODE>
+to <CODE>fileN.html</CODE> are the HTML files you want to use for the book.
 
-<H2>Setting the Title Image</H2>
+<P>The "--book" option tells <I>HTMLDOC</I> that you want to
+generate a book from the HTML file(s) you specified.
+<I>HTMLDOC</I> will build a table of contents for the book using
+the heading elements (<CODE>H1</CODE>, <CODE>H2</CODE>, etc.) in
+your HTML files. It will also add a title page using the
+document <CODE>TITLE</CODE> text and other <CODE>META</CODE>
+information you supply in your HTML files.
 
-The <CODE>--titleimage</CODE> sets the image to use on the title page:
+<H2>Setting the Title File</H2>
+
+The <CODE>--titlefile</CODE> option sets the HTML file or image
+to use on the title page:
 
 <UL><PRE>
-% <KBD>htmldoc --titleimage filename.gif ... ENTER</KBD>
-% <KBD>htmldoc --titleimage filename.jpg ... ENTER</KBD>
-% <KBD>htmldoc --titleimage filename.png ... ENTER</KBD>
+% <KBD>htmldoc --titlefile filename.bmp ... ENTER</KBD>
+% <KBD>htmldoc --titlefile filename.gif ... ENTER</KBD>
+% <KBD>htmldoc --titlefile filename.jpg ... ENTER</KBD>
+% <KBD>htmldoc --titlefile filename.png ... ENTER</KBD>
+% <KBD>htmldoc --titlefile filename.html ... ENTER</KBD>
 </PRE></UL>
 
-<I>HTMLDOC</I> supports GIF, JPEG, and PNG images.
+<I>HTMLDOC</I> supports BMP, GIF, JPEG, and PNG images, as well as generic
+HTML text you supply for the title page(s).
 
 </BODY>
 </HTML>
