@@ -66,7 +66,7 @@ The <CODE>--bodycolor</CODE> option specifies the background color for all
 pages in the document. The color can be specified by name or as a 6-digit
 hexadecimal number of the form <CODE>#RRGGBB</CODE>.
 
-<!-- NEED 4in -->
+<!-- NEED 6in -->
 <H3>--bodyfont typeface</H3>
 
 The <CODE>--bodyfont</CODE> option specifies the default text font used for
@@ -114,7 +114,7 @@ generating PostScript and PDF files. It does not affect the font size of text.
 
 <P>This option is only available when generating PostScript or PDF files.
 
-<!-- NEED 4in -->
+<!-- NEED 6in -->
 <H3>--charset charset</H3>
 
 The <CODE>--charset</CODE> option specifies the 8-bit character set encoding
@@ -180,7 +180,7 @@ features for PDF output.
 
 <P>This option is only available when generating PDF files.
 
-<!-- NEED 3in -->
+<!-- NEED 4in -->
 <H3>--firstpage page</H3>
 
 The <CODE>--firstpage</CODE> option specifies the first page that will be
@@ -421,6 +421,11 @@ features should be enabled in PDF output.
 
 <P>This option is only available when generating PDF files.
 
+<H3>--no-numbered</H3>
+
+The <CODE>--no-numbered</CODE> option specifies that headings
+should not be numbered.
+
 <H3>--no-pscommands</H3>
 
 The <CODE>--no-pscommands</CODE> option specifies that PostScript device
@@ -531,7 +536,7 @@ are loaded by HTMLDOC. It is usually used to get images that use absolute
 server paths to load.
 
 <P>Directories are separated by the semicolon (;) so that drive letters
-(and eventually URLs) can be specified.
+and URLs can be specified.
 
 <!-- NEED 5in -->
 <H3>--permissions permission</H3>
@@ -636,7 +641,7 @@ the title page.
 <H3>--titleimage filename</H3>
 
 The <CODE>--titleimage</CODE> option specifies the title image for the
-title page. The supported formats are GIF, JPEG, and PNG.
+title page. The supported formats are BMP, GIF, JPEG, and PNG.
 
 <!-- NEED 6in -->
 <H3>--tocfooter lcr</H3>
