@@ -73,8 +73,8 @@ This manual is organized into tutorial and reference chapter:
 
 <H2>Support</H2>
 
-Commercial support is available from Easy Software Products for $99 US per year per
-system. Information can be found at the <I>HTMLDOC</I> web page,
+Commercial support is available from Easy Software Products.
+Information can be found at the <I>HTMLDOC</I> web page,
 "<A HREF="http://www.easysw.com/htmldoc">http://www.easysw.com/htmldoc</A>".
 
 <H2>Encryption Support</H2>
@@ -101,8 +101,9 @@ is the service mark property of CompuServe Incorporated.
 
 <P>Linux is a registered trademark of Linus Torvalds.
 
-<P>Microsoft, Windows, Windows 95, Windows 98, and Windows NT are
-registered trademarks of Microsoft Corporation.
+<P>Microsoft, Windows, Windows 95, Windows 98, Windows Me,
+Windows 2000, and Windows NT are registered trademarks of
+Microsoft Corporation.
 
 <P>Red Hat and RPM are registered trademarks of Red Hat, Inc.
 
