@@ -2,6 +2,4 @@ HTMLDOC is a HTML processing program that generates HTML,
 PostScript, and PDF files with a table of contents.
 
 Commercial support for HTMLDOC is available from Easy Software
-Products for $99 US.
-
-
+Products at "http://www.easysw.com/htmldoc".
